--- a/Lab2/Lab2-self-practice.ipynb
+++ b/Lab2/Lab2-self-practice.ipynb
@@ -141,8 +141,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Is our model underfitting or overfitting? Why? \n",
-    ">The model is underfitting, since we can even see the from the diagram that the predicted values (which is represented by the blue line) differ from the actual values. Because, linear regression with a single feature (not including the bias), is not enough for such a dataset, and more advanced regression model is required to solve the problem"
+    "Is our model underfitting or overfitting? Why? \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">This model is underfitting, since it differ from many points on the train dataset"
    ]
   },
   {
@@ -232,8 +238,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MSE is decreasing while we increase the number of degrees in PL, but does this mean that we can choose the PL model with the highest number of degrees? \n",
-    ">PL with highest number of degree is resulting in the min MSE (which is about 1.76), actually it is overfitting."
+    "MSE is decreasing while we increase the number of degrees in PL, but does this mean that we can choose the PL model with the highest number of degrees? \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> PL with highest number of degree is resulting in the min MSE (which is about 1.76), but actually it leads to overfitting."
    ]
   }
  ],
