--- a/Lab4/lab-4-self-practice.ipynb
+++ b/Lab4/lab-4-self-practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -143,7 +143,7 @@
        "4         0       1  female  25.00      1      2  151.5500        S"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -252,8 +252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy before scaling: 0.767175572519084\n",
-      "Accuracy after scaling: 0.767175572519084\n"
+      "Accuracy before scaling: 0.7595419847328244\n",
+      "Accuracy after scaling: 0.7595419847328244\n"
      ]
     }
    ],
@@ -292,6 +292,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Elastic net is a combination of the two regularized variants of linear regression: ridge and lasso.\n",
+    "You can set up `l1_ratio` parameter, which would affect as follows:\n",
+    "```python\n",
+    "+ alpha * l1_ratio * ||w||_1\n",
+    "+ 0.5 * alpha * (1 - l1_ratio) * ||w||^2_2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -347,36 +359,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.24561403508771\n",
-      "98.24561403508771\n",
-      "91.81286549707602\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python310\\lib\\site-packages\\sklearn\\svm\\_base.py:1225: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n",
-      "c:\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n"
+      "Lasso coef : [-0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -2.38172126e-04\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -5.56784681e-05 -4.84280802e-04\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00]\n",
+      "Ridge coef : [ 0.17447188  0.00153045 -0.00513055 -0.00128325 -0.11818432 -0.01683136\n",
+      " -0.13128865 -0.22476034 -0.15232779 -0.00792515 -0.12750205  0.02721072\n",
+      " -0.04046861  0.00138772 -0.0483056   0.0575303   0.15943928 -0.03971724\n",
+      " -0.02204321  0.0055686  -0.26742486 -0.01464427  0.00942734  0.00125219\n",
+      " -0.27686671 -0.11419131 -0.21257358 -0.45126176 -0.31185673 -0.06081197]\n",
+      "ElasticNet coef : [-0.00000000e+00 -0.00000000e+00 -0.00000000e+00  0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -8.60114343e-04 -1.06421822e-02 -1.10486455e-05\n",
+      " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00]\n",
+      "67.2514619883041\n",
+      "69.00584795321637\n",
+      "67.83625730994152\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import Lasso, Ridge, ElasticNet\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Write code here\n",
     "def predic(m):\n",
-    "    return m.predict(x_test)\n",
+    "    y_pred = m.predict(x_test)\n",
+    "    y_pred = np.where(y_pred[:] > 0,1,0)\n",
+    "    return y_pred\n",
     "\n",
-    "lasso = LogisticRegression(penalty='l1',solver='liblinear').fit(x_train,y_train)\n",
-    "ridge = LogisticRegression(penalty='l2',solver='liblinear').fit(x_train,y_train)\n",
-    "elasticnet = LogisticRegression(penalty='elasticnet', l1_ratio=0.5,solver='saga').fit(x_train,y_train)\n",
+    "lasso = Lasso().fit(x_train, y_train)\n",
+    "ridge = Ridge().fit(x_train, y_train)\n",
+    "elasticnet = ElasticNet().fit(x_train, y_train)\n",
+    "models = {\"Lasso\":lasso,\"Ridge\":ridge,\"ElasticNet\":elasticnet}\n",
+    "\n",
+    "for model in models:\n",
+    "    print(f'{model} coef : {models[model].coef_}')\n",
     "\n",
     "for y_pred in [predic(x) for x in [lasso,ridge,elasticnet]]:\n",
     "    print(accuracy_score(y_test,y_pred)*100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">As we can see, the Ridge regularization give us more non-zero parametres, which leads to more dense models. It performs better then Lasso ones"
    ]
   },
   {
@@ -554,12 +590,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which model performed better? What is the advantages of each model over the other?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Both models performed almost the same, but K Nearest Neighbors was better as it's have some f1-score better and also it perfectly classified 6 number "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "Which model performed better? What is the advantages of each model over the other?\n",
-    "> \n",
+    "\n",
+    "\n",
     "What is the output of `classification_report` function? How to interpret it?\n",
     "\n",
     ">1. Precision: Percentage of correct positive predictions relative to total positive predictions.\n",
