--- a/Lab1/Lab-1-solution.ipynb
+++ b/Lab1/Lab-1-solution.ipynb
@@ -2178,7 +2178,7 @@
    "metadata": {},
    "source": [
     "**From the plots above we could see that three types of ireces are separable.      \n",
-    "The petal width is the most important feature, we can see correlation in graphs where it ploted.**"
+    "The petal width is the most important feature, we can seperate features with one line in graphs where it ploted.**"
    ]
   }
  ],
