--- a/Lab2/Lab2-solution.ipynb
+++ b/Lab2/Lab2-solution.ipynb
@@ -476,18 +476,15 @@
     "\n",
     "Q: What RMSE, MSE and R-squared tell us?\n",
     "\n",
-    "<span style=\"color:blue\"> \n",
-    "In short, MAE evaluates the absolute distance of the observations (the entries of the dataset) to the predictions on a regression, taking the average over all observations. We use the absolute value of the distances so that negative errors are accounted properly. </span>\n",
     "\n",
-    "<span style=\"color:blue\">Another way to do so is by squaring the distance, so that the results are positive. This is done by the MSE, and higher errors (or distances) weigh more in the metric than lower ones, due to the nature of the power function. </span>\n",
+    "In short, MAE evaluates the absolute distance of the observations (the entries of the dataset) to the predictions on a regression, taking the average over all observations. We use the absolute value of the distances so that negative errors are accounted properly. \n",
+    "Another way to do so is by squaring the distance, so that the results are positive. This is done by the MSE, and higher errors (or distances) weigh more in the metric than lower ones, due to the nature of the power function.\n",
     "\n",
-    "\n",
-    "<span style=\"color:blue\"> A backlash in MSE is the fact that the unit of the metric is also squared, so if the model tries to predict price in US$, the MSE will yield a number with unit (US$)² which does not make sense. RMSE is used then to return the MSE error to the original unit by taking the square root of it, while maintaining the property of penalizing higher errors.</span>\n",
+    " A backlash in MSE is the fact that the unit of the metric is also squared, so if the model tries to predict price in US$, the MSE will yield a number with unit (US$)² which does not make sense. RMSE is used then to return the MSE error to the original unit by taking the square root of it, while maintaining the property of penalizing higher errors.\n",
     "\n",
     "\n",
-    "<span style=\"color:blue\">\n",
     "Both RMSE and MSE tell us how much our predictions will be away from the truth on average.\n",
-    "$R^2$ tells us the proportion of the variance/variability in the Y was explained by the model via the explanatory variables. </span>"
+    "$R^2$ tells us the proportion of the variance/variability in the Y was explained by the model via the explanatory variables."
    ]
   },
   {
